--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,19 @@
 plugins {
     id 'org.springframework.boot' version '3.3.1'
     id 'io.spring.dependency-management' version '1.1.5'
-    id 'eclipse'
     id 'java'
+    id 'eclipse'
+    id 'idea'
+}
+
+group = 'com.example'
+version = '0.0.1-SNAPSHOT'
+
+java {
+    // Use Java 23 toolchain
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(23)
+    }
 }
 
 repositories {
@@ -13,16 +24,23 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
 
-    compileOnly 'org.projectlombok:lombok:1.18.34'
-    annotationProcessor 'org.projectlombok:lombok:1.18.34'
-    testImplementation 'org.projectlombok:lombok:1.18.34'
-    testAnnotationProcessor 'org.projectlombok:lombok:1.18.34'
+    // Lombok – no explicit version needed, Spring Boot manages it
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
+    testCompileOnly 'org.projectlombok:lombok'
+    testAnnotationProcessor 'org.projectlombok:lombok'
 
+    // Spring Boot test starter already brings JUnit Jupiter + Hamcrest,
+    // but we’ll keep explicit Hamcrest since you had it.
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
     testImplementation 'org.hamcrest:hamcrest-library:3.0'
 }
 
-test {
+tasks.withType(JavaCompile).configureEach {
+    // Ensure Java 23 bytecode
+    options.release = 23
+}
+
+tasks.withType(Test).configureEach {
     useJUnitPlatform()
 }
